add Chat with users based on WebSocket /ws/chat
